more tweaks and changes. mostly refactoring state management of given answers